--- a/czy/react-visual-modeling-master/example/package.json
+++ b/czy/react-visual-modeling-master/example/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "antd": "~4.10.3",
+    "graphql": "^16.6.0",
     "jquery": "^3.4.1",
     "react": "~16.12.0",
     "react-dom": "^16.13.1",
