--- a/example/package.json
+++ b/example/package.json
@@ -11,20 +11,19 @@
   "license": "MIT",
   "dependencies": {
     "antd": "~4.10.3",
-    "graphql": "^16.6.0",
-    "jquery": "^3.4.1",
+    "jquery": "~3.4.1",
     "react": "~16.12.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "~16.13.1",
     "react-router": "~5.1.2",
     "react-router-dom": "~5.1.2",
-    "webpack": "^4.41.6",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "~4.41.6",
+    "webpack-dev-server": "~3.10.3"
   },
   "devDependencies": {
     "@babel/core": "~7.8.3",
     "@babel/plugin-proposal-class-properties": "~7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "~7.8.3",
-    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/plugin-transform-runtime": "~7.12.1",
     "@babel/preset-env": "~7.8.3",
     "@babel/preset-react": "~7.8.3",
     "babel-loader": "8.0.6",
@@ -34,7 +33,7 @@
     "eslint-config-aliyun": "~2.0.3",
     "eslint-plugin-react": "~7.13.0",
     "file-loader": "~2.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "~3.2.0",
     "less": "~3.7.0",
     "less-loader": "~4.1.0",
     "mini-css-extract-plugin": "~0.9.0",
@@ -42,7 +41,7 @@
     "ts-loader": "~8.0.14",
     "url-loader": "~1.0.1",
     "webpack": "~4.41.5",
-    "webpack-cli": "^3.0.8",
+    "webpack-cli": "~3.0.8",
     "webpack-dev-server": "~3.10.1"
   }
 }
