--- a/package.json
+++ b/package.json
@@ -21,16 +21,13 @@
   "author": "无惟",
   "license": "MIT",
   "dependencies": {
-    "butterfly-dag": "^5.1.0-beta.2",
-    "jquery": "^3.5.1",
-    "react-data-mapping": "^1.1.2",
-    "react-visual-modeling": "^1.1.5",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "butterfly-dag": "~4.0.2",
+    "jquery": "~3.5.1",
+    "react-data-mapping": "~1.1.2",
+    "typescript": "^4.1.6"
   },
   "peerDependencies": {
-    "lodash": "^4.17.20",
+    "lodash": "~4.17.20",
     "react": ">15.6.1, <17.0.0",
     "react-dom": ">15.6.1, <17.0.0"
   },
@@ -38,15 +35,15 @@
     "@babel/core": "~7.12.0",
     "@babel/plugin-proposal-class-properties": "~7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "~7.12.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/plugin-transform-modules-commonjs": "~7.12.1",
+    "@babel/plugin-transform-runtime": "~7.12.1",
     "@babel/preset-env": "~7.12.0",
     "@babel/preset-react": "~7.12.1",
     "@babel/preset-typescript": "~7.12.7",
-    "@types/jquery": "^3.5.5",
+    "@types/jquery": "~3.5.5",
     "@types/lodash": "~4.14.167",
     "@types/react": "~17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "~17.0.0",
     "babel-loader": "~8.2.0",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
     "less": "~3.12.2",
@@ -59,7 +56,6 @@
     "rollup-plugin-peer-deps-external": "~2.2.4",
     "rollup-plugin-postcss": "~4.0.0",
     "rollup-plugin-typescript2": "~0.29.0",
-    "rollup-plugin-url": "~3.0.1",
-    "typescript": "~4.1.3"
+    "rollup-plugin-url": "~3.0.1"
   }
 }
